8392939: Legal method reference with type annotations not accepted by the parser